--- a/app/styles/Home.module.css
+++ b/app/styles/Home.module.css
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-   position: relative;
+  position: relative;
   z-index: 10;
 }
 
@@ -141,6 +141,10 @@
   .description {
     font-size: var(--fz-lg);
   }
+  
+  .cta {
+    padding: 1.1rem 1.5rem;
+  }
 }
 
 @media (max-width: 480px) {
@@ -150,9 +154,26 @@
   
   .greeting {
     font-size: var(--fz-sm);
+    margin: 0 0 20px 2px;
+  }
+  
+  .name, .tagline {
+    font-size: clamp(30px, 8vw, 50px);
+  }
+  
+  .tagline {
+    line-height: 1.1;
+    margin: 5px 0 20px;
   }
   
   .description {
     font-size: var(--fz-md);
+    margin: 15px 0 0;
+  }
+  
+  .cta {
+    margin-top: 35px;
+    padding: 1rem 1.5rem;
+    font-size: 13px;
   }
 } 
