design and link changes

--- a/app/components/Experience.module.css
+++ b/app/components/Experience.module.css
@@ -45,7 +45,7 @@
   flex-direction: column;
   z-index: 3;
   width: max-content;
-  min-width: 120px;
+  /* min-width: 120px; */
   margin-right: 20px;
   border-left: 2px solid var(--lightest-navy);
 }
